# crinha-2024

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Makefile  build-debug.sh  build.sh  conanfile.txt  crinha.conf  rinha
include/: pg_config.h
src/: main.c
src/controller/: cliente_controller.c  cliente_controller.h  pessoa_controller.c  pessoa_controller.h
src/entity/: pessoa.h  transacao.h
src/repository/: cliente_repository.c  cliente_repository.h  pessoa_repository.c  pessoa_repository.h  transacao_repository.c  transacao_repository.h
src/server/: server.c
src/service/: cliente_service.c  cliente_service.h  pessoa_service.c  pessoa_service.h  transacao_service.c  transacao_service.h
src/util/: array_list.c  array_list.h  config_parser.c  config_parser.h  db_connection.c  db_connection.h  env_util.c  env_util.h  uuid_util.c  uuid_util.h
stack/: docker-compose.yaml  init.sql  nginx.conf  postgresql.conf
